--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/launchdarkly/448af03f-706a-4c10-804a-4d7bb4684c69?lever-via=236wXdLYZc'>LaunchDarkly - Software Engineer, Frontend</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/qlik/job/o9ufbfwN'>Qlik Careers - Frontend Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -94,7 +98,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
+<h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
     Frontend Developer Intern at Email Meter
 </a></h5> 
 <p><span class="badge badge-light">Madrid Madrid Madrid United States New York</span></p>
@@ -128,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571635-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571635-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -136,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698469559-engineering-manager-front-end-core-xp'>Omio Engineering Manager - Front End - Core XP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698469559-engineering-manager-front-end-core-xp'>Omio Engineering Manager - Front End - Core XP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -186,7 +190,7 @@
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cerebralgroup.applytojob.com/apply/Q3m8i5Ls3E/Front-End-Developer'>Front End Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
+<h5><a href='http://cerebralgroup.applytojob.com/apply/Q3m8i5Ls3E/Front-End-Developer'>Front End Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -194,7 +198,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -240,7 +244,7 @@
 <p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/faunacom/view/P_AAAAAAJAABiBUOvIo1SfXN'>NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.</a></h5> 
+<h5><a href='https://hire.withgoogle.com/public/jobs/faunacom/view/P_AAAAAAJAABiBUOvIo1SfXN'>NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.</a></h5> 
 <p><span class="badge badge-light">San Francisco Boston San Francisco Boston</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -314,7 +318,7 @@
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/revzilla/002be844-5c04-4697-880f-c74489707aa9'>RevZilla - Front End Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revzilla/002be844-5c04-4697-880f-c74489707aa9'>RevZilla - Front End Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -340,11 +344,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4237465002'>Job Application for Frontend Engineer (Configure & Serverless Team) at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4237465002'>Job Application for Frontend Engineer (Configure & Serverless Team) at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zurich.impacthub.ch/de/job/front-end-host-colab-100/'>
+<h5><a href='https://zurich.impacthub.ch/de/job/front-end-host-colab-100/'>
 		Impact Hub Zurich |
 		Front-End-Host Colab - 100% - Impact Hub Zurich	</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -394,7 +398,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
 <hr/>
-<h5><a href='https://e-bot7.join.com/jobs/470792-senior-frontend-engineer-elm-m-f-d'>Job @ e-bot7 (Munich): Senior Frontend Engineer El... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://e-bot7.join.com/jobs/470792-senior-frontend-engineer-elm-m-f-d'>Job @ e-bot7 (Munich): Senior Frontend Engineer El... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -457,10 +461,6 @@
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://dedeleads.com/job/dutchie-looking-for-front-end-engineer/'>Dutchie looking for Front-End Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://dedeleads.com/job/dental-intelligence-looking-for-front-end-developer/'>Dental Intelligence looking for Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
