--- a/deep-learning.html
+++ b/deep-learning.html
@@ -94,7 +94,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697984720-deep-learning-engineer'>Bosch Group Deep Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697984720-deep-learning-engineer'>Bosch Group Deep Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -112,7 +112,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://martinsenmayer.recruitee.com/l/de/o/deep-learning-engineer'>
+<h5><a href='https://martinsenmayer.recruitee.com/l/de/o/deep-learning-engineer'>
       Deep Learning Engineer - Martinsen Mayer
     </a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
@@ -142,7 +142,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -187,7 +187,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -214,7 +214,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -264,13 +264,13 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://indigoinfra.recruitee.com/o/senior-frontend-engineer-reactjs-imaging-cornerstonejs-deeplearning-healthcare-startup-amsterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indigoinfra.recruitee.com/o/senior-frontend-engineer-reactjs-imaging-cornerstonejs-deeplearning-healthcare-startup-amsterdam'>
       Senior Frontend engineer React.js & Imaging Cornerstone.js | Deep-learning Healthcare start-up | Amsterdam - Indigo
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam Amsterdam  Amsterdam, Netherlands  Amsterdam</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://www.jobbnorge.no/en/available-jobs/job/176168/phd-research-fellow-in-ict-deep-reinforcement-learning-for-a-chatbot-based-personal-educator'>Phd Research Fellow in ICT - Deep Reinforcement Learning for a Chatbot Based Personal Educator (176168) | University of Agder</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobbnorge.no/en/available-jobs/job/176168/phd-research-fellow-in-ict-deep-reinforcement-learning-for-a-chatbot-based-personal-educator'>Phd Research Fellow in ICT - Deep Reinforcement Learning for a Chatbot Based Personal Educator (176168) | University of Agder</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
@@ -389,7 +389,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/deep-learning-computer-vision-research-software-engineer-00054195-6825'>Deep Learning / Computer Vision Research Software Engineer - 00054195 - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/deep-learning-computer-vision-research-software-engineer-00054195-6825'>Deep Learning / Computer Vision Research Software Engineer - 00054195 - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -397,7 +397,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Architecture-Intern---Hardware_JR1923834'>Deep Learning Architecture Intern - Hardware</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Architecture-Intern---Hardware_JR1923834'>Deep Learning Architecture Intern - Hardware</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Compute Performance Developer Technology Intern - CUDA | US, CA, Santa 
 Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
@@ -406,7 +406,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cardinalhire/8d744a8f-f26b-4932-abb6-2783eb9000ea'>Stealth Startup - Machine Learning and Deep Learning Research Scientist - up to $500,000 + 10% Equity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/8d744a8f-f26b-4932-abb6-2783eb9000ea'>Stealth Startup - Machine Learning and Deep Learning Research Scientist - up to $500,000 + 10% Equity</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -477,7 +477,7 @@ Skills - Barcelona at Crisalix.</p>
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
