--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698615531-compliance-program-manager'>Infotree Service Inc Compliance Program Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Atlanta, GA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/ywghpymqsddyfkggtcymwkkwsy'>IT Project Manager | JFR Staffing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/oak-street-health/job/oIUsbfwZ'>Oak Street Health Careers - Clinical Informatics Specialist (CIS) Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1942164'>Job Application for Marketing Project Manager, Esports at GSW Sports, LLC</a></h5> 
@@ -84,11 +88,11 @@
 <p><span class="badge badge-light">Minneapolis, MN Minneapolis</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.ihireengineering.com/jobs/view/253074816?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Engineer / Assistant Project Manager - Irvine, </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.ihireengineering.com/jobs/view/253074816?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Engineer / Assistant Project Manager - Irvine, </a></h5> 
 <p><span class="badge badge-light">Irvine California  Irvine California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.ihireconstruction.com/jobs/view/253064631?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Manager - Orlando, </a></h5> 
+<h5><a href='https://www.ihireconstruction.com/jobs/view/253064631?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Manager - Orlando, </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -140,7 +144,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States  Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -248,7 +252,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oIEWafwc&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n9oBpMwO'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oIEWafwc&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n9oBpMwO'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -256,7 +260,7 @@
 <p><span class="badge badge-light">Irving, TX  Irving, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +304,7 @@
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.echinacities.com/jobchapter/1354720851?fromat=26'>Project Manager - Jobs in Shanghai?????????????????????????</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.echinacities.com/jobchapter/1354720851?fromat=26'>Project Manager - Jobs in Shanghai?????????????????????????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -324,7 +328,7 @@
 <p><span class="badge badge-light">Norwalk, CT</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.icerecruit.com/job/190837/senior-project-manager/?TrackID=2194'>Senior Project Manager job with Conrad Consulting Ltd. | 190837</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.icerecruit.com/job/190837/senior-project-manager/?TrackID=2194'>Senior Project Manager job with Conrad Consulting Ltd. | 190837</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -447,11 +451,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oO7sbfwi'>Carri?res Nortek Air Solutions - Project Manager III</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
